# vault_01

./: README.md  YOUR-WORKFLOW.md  analysis_options.yaml  directory_structure.txt  flutter_rust_bridge.yaml  pubspec.yaml
.Scripts/: copy_rust_dll.ps1  flutter_run_windows.ps1
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  test_database.dart
lib/core/providers/: providers.dart
lib/core/theme/: app_theme.dart
lib/providers/: providers.dart
lib/screens/: input_screen.dart
lib/shared/widgets/: loading_overlay.dart
lib/src/frb_generated/: frb_generated.dart  frb_generated.io.dart  (+1 more)
lib/theme/: app_theme.dart
lib/utils/: path_helpers.dart  result.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  flutter_rust_bridge.yaml
rust/migrations/: V1__initial_schema.sql  V2__add_favorites.sql
rust/src/: database.rs  frb_generated.rs  lib.rs
rust/src/api/: mod.rs  simple.rs
rust/src/database/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_vault_01.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_vault_01.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: copy_rust_dll.ps1
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
