[package]
name = "rust_lib_vault_01"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# This single entry combines the dependency with all necessary features.
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] } 

lazy_static = "1.4.0"
parking_lot = "0.12.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }