[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
flutter_rust_bridge_macros = "2"

# Database (Bundled to avoid OpenSSL errors)
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities for Global State (Fixes your current errors)
parking_lot = "0.12"
lazy_static = "1.4"
