[package]
name = "rust_lib_vault_01"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
flutter_rust_bridge_macros = "2"
# ... existing dependencies (rusqlite, parking_lot, etc.)
once_cell = "1.18" # Add this line
# You may also need to ensure 'tokio' is present if using async functions with FRB

# Database (Bundled to avoid OpenSSL errors)
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
refinery = { version = "0.8", features = ["rusqlite"] }
anyhow = "1.0"

# Utilities for Global State (Fixes your current errors)
parking_lot = "0.12"
lazy_static = "1.4"
